--- a/pointclouds/.htaccess
+++ b/pointclouds/.htaccess
@@ -1,3 +1,9 @@
+
+Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept"
+Header set Access-Control-Allow-Methods "GET, PUT, POST, DELETE, OPTIONS"
+
+
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule .* index.php/$0 [L]
